# simhash-demo

./: .gitignore  README.md  docs.json  fake_data.py  log_service.py  main.py  pyproject.toml  requirements.txt  sim_hash.py  tests.py
sim_hash_demo/: __init__.py  log_service.py  logging.conf  sim_hash.py
tests/: fake_data.py  test_sim_hash.py
tests/data/: docs.json
