[tool.poetry]
name = "sim_hash_demo"
version = "0.1.0"
description = "an simhash demo project"
authors = ["Mark Chang <ak0922747401@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
simhash = "1.9.0"
redis = "4.4.4"
pytest = "5.4.1"
colorlog = "4.0.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
